force-app/main/default/objects/QCC_Specific_Needs__c/QCC_Specific_Needs__c.object-meta.xml
<CustomObject>
    <description>Container for capturing the Specific Need Smart Forms</description>
    <label>Specific Needs</label>
    <nameField>
        <displayFormat>SN{00000000}</displayFormat>
        <label>Specific Needs</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specific Needs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>