force-app/main/default/objects/QCC_Specific_Needs__c/fields/Confirm_Outcome_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Outcome_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Outcome to Customer</label>
    <type>Checkbox</type>
</CustomField>