force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Age_of_Dog_Years__c.field-meta.xml
<CustomField>
    <fullName>QCC_Age_of_Dog_Years__c</fullName>
    <label>Age of Dog (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>