force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Aircraft_Type_MCOQS__c.field-meta.xml
<CustomField>
    <fullName>QCC_Aircraft_Type_MCOQS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aircraft Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>