force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Airline_MCIT__c.field-meta.xml
<CustomField>
    <fullName>QCC_Airline_MCIT__c</fullName>
    <label>Airline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qantas</fullName>
            </value>
            <value>
                <fullName>QantasLink</fullName>
            </value>
            <value>
                <fullName>Jetstar</fullName>
            </value>
            <value>
                <fullName>AirNorth</fullName>
            </value>
            <value>
                <fullName>Network Aviation</fullName>
            </value>
            <value>
                <fullName>Cobham Aviation</fullName>
            </value>
            <value>
                <fullName>Our Airline</fullName>
            </value>
            <value>
                <fullName>Alliance Airlines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>