force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_APRA_Number__c.field-meta.xml
<CustomField>
    <fullName>QCC_APRA_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>APRA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>