force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Arrival_Port_Amb_Confirmation_No__c.field-meta.xml
<CustomField>
    <fullName>QCC_Arrival_Port_Amb_Confirmation_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Port Ambulance Confirmation No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>