force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Association_Name_MBW__c.field-meta.xml
<CustomField>
    <fullName>QCC_Association_Name_MBW__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Association Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>