force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Booking_Created__c.field-meta.xml
<CustomField>
    <fullName>QCC_Booking_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Created</label>
    <type>Checkbox</type>
</CustomField>