force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Case__c.field-meta.xml
<CustomField>
    <fullName>QCC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Specific Needs</relationshipLabel>
    <relationshipName>Specific_Needs</relationshipName>
    <type>Lookup</type>
</CustomField>