force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Comments__c.field-meta.xml
<CustomField>
    <fullName>QCC_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>