force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Compliance_Approval_Request_Sent_SD__c.field-meta.xml
<CustomField>
    <fullName>QCC_Compliance_Approval_Request_Sent_SD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Approval Request Sent(option)</label>
    <type>Checkbox</type>
</CustomField>