force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Compliance_Outcome_Received_SD__c.field-meta.xml
<CustomField>
    <fullName>QCC_Compliance_Outcome_Received_SD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Outcome Received(optional)</label>
    <type>Checkbox</type>
</CustomField>