force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Confirmation_Sent_to_Customer_MC__c.field-meta.xml
<CustomField>
    <fullName>QCC_Confirmation_Sent_to_Customer_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Sent to Customer</label>
    <type>Checkbox</type>
</CustomField>