force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Confirmation_sent_to_Customer_MCOQS__c.field-meta.xml
<CustomField>
    <fullName>QCC_Confirmation_sent_to_Customer_MCOQS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation sent to Customer</label>
    <type>Checkbox</type>
</CustomField>