force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Contact__c.field-meta.xml
<CustomField>
    <fullName>QCC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact related to the Specific Needs record.</description>
    <inlineHelpText>The contact related to the Specific Needs record.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Specific Needs</relationshipLabel>
    <relationshipName>Specific_Needs</relationshipName>
    <type>Lookup</type>
</CustomField>