force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Customer_has_accepted_Quote_MCOD__c.field-meta.xml
<CustomField>
    <fullName>QCC_Customer_has_accepted_Quote_MCOD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer has accepted Quote</label>
    <type>Checkbox</type>
</CustomField>