force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Dangerous_Goods_Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>QCC_Dangerous_Goods_Approval_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dangerous Goods Approval Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>