force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Dangerous_Goods_Approval_Provided__c.field-meta.xml
<CustomField>
    <fullName>QCC_Dangerous_Goods_Approval_Provided__c</fullName>
    <label>Dangerous Goods Approval Provided?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>