force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Departure_Port_Ambulance_Company__c.field-meta.xml
<CustomField>
    <fullName>QCC_Departure_Port_Ambulance_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Port Ambulance Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>