force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Destination__c.field-meta.xml
<CustomField>
    <fullName>QCC_Destination__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>