force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Dog_Traveled_and_Previously_Approved__c.field-meta.xml
<CustomField>
    <fullName>QCC_Dog_Traveled_and_Previously_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dog Traveled and Previously Approved?</label>
    <type>Checkbox</type>
</CustomField>