force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Extra_Seat_Required_IT__c.field-meta.xml
<CustomField>
    <fullName>QCC_Extra_Seat_Required_IT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra Seat Required?</label>
    <type>Checkbox</type>
</CustomField>