force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Final_Confirmation_Sent_to_Requester__c.field-meta.xml
<CustomField>
    <fullName>QCC_Final_Confirmation_Sent_to_Requester__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Confirmation Sent to Requester</label>
    <type>Checkbox</type>
</CustomField>