force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Flight_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight Date</label>
    <type>Date</type>
</CustomField>