force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Flow_Rate_LpM_MCOQS__c.field-meta.xml
<CustomField>
    <fullName>QCC_Flow_Rate_LpM_MCOQS__c</fullName>
    <label>Flow Rate (LpM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>