force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Flow_Rate_LpM_Number_MCIT__c.field-meta.xml
<CustomField>
    <fullName>QCC_Flow_Rate_LpM_Number_MCIT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Flow Rate (LpM) Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>