force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Intelex_Reference_No_CPAP__c.field-meta.xml
<CustomField>
    <fullName>QCC_Intelex_Reference_No_CPAP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intelex Reference No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>