force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Length_CBBG__c.field-meta.xml
<CustomField>
    <fullName>QCC_Length_CBBG__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>