force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Length_of_Dog_cm__c.field-meta.xml
<CustomField>
    <fullName>QCC_Length_of_Dog_cm__c</fullName>
    <label>Length of Dog (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>