force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_MEDA_Clearance_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>QCC_MEDA_Clearance_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MEDA Clearance Confirmed</label>
    <type>Checkbox</type>
</CustomField>