force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_MEDA_Completed_Approved_MCQS__c.field-meta.xml
<CustomField>
    <fullName>QCC_MEDA_Completed_Approved_MCQS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MEDA Completed/Approved</label>
    <type>Checkbox</type>
</CustomField>