force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Model__c.field-meta.xml
<CustomField>
    <fullName>QCC_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>