force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Model_of_Wheelchair__c.field-meta.xml
<CustomField>
    <fullName>QCC_Model_of_Wheelchair__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model of Wheelchair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>