force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_No_Support_Requested__c.field-meta.xml
<CustomField>
    <fullName>QCC_No_Support_Requested__c</fullName>
    <label>Support Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>