force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Notify_Airport_and_Crew_1_Day__c.field-meta.xml
<CustomField>
    <fullName>QCC_Notify_Airport_and_Crew_1_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Airport and Crew (-1 Day)</label>
    <type>Checkbox</type>
</CustomField>