force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Notify_Cabin_Crew_CJMs_SD__c.field-meta.xml
<CustomField>
    <fullName>QCC_Notify_Cabin_Crew_CJMs_SD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Cabin Crew &amp; CJMs</label>
    <type>Checkbox</type>
</CustomField>