force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Notify_Departure_Airport_3_Days_ST__c.field-meta.xml
<CustomField>
    <fullName>QCC_Notify_Departure_Airport_3_Days_ST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Departure Airport (-3 Days)</label>
    <type>Checkbox</type>
</CustomField>