force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Notify_Eng_Airport_Crew_2_days_IT__c.field-meta.xml
<CustomField>
    <fullName>QCC_Notify_Eng_Airport_Crew_2_days_IT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Eng/Airport/Crew (-2 days)</label>
    <type>Checkbox</type>
</CustomField>