force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Origin__c.field-meta.xml
<CustomField>
    <fullName>QCC_Origin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>