force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Outcome_Confirmation_Sent_to_Cst_SD__c.field-meta.xml
<CustomField>
    <fullName>QCC_Outcome_Confirmation_Sent_to_Cst_SD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outcome Confirmation Sent to Customer</label>
    <type>Checkbox</type>
</CustomField>