force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Oxygen_Ordered__c.field-meta.xml
<CustomField>
    <fullName>QCC_Oxygen_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oxygen Ordered</label>
    <type>Checkbox</type>
</CustomField>