force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>QCC_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Received</label>
    <type>Checkbox</type>
</CustomField>