force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_PNR_Updated_MCIT__c.field-meta.xml
<CustomField>
    <fullName>QCC_PNR_Updated_MCIT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PNR Updated</label>
    <type>Checkbox</type>
</CustomField>