force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>QCC_Quote_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>