force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Quote_Details_Text_MCIT__c.field-meta.xml
<CustomField>
    <fullName>QCC_Quote_Details_Text_MCIT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Details Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>