force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Quote_Provided_to_Customer_MCOQS__c.field-meta.xml
<CustomField>
    <fullName>QCC_Quote_Provided_to_Customer_MCOQS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Provided to Customer</label>
    <type>Checkbox</type>
</CustomField>