force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Quote_Provided_to_Requester_MCST__c.field-meta.xml
<CustomField>
    <fullName>QCC_Quote_Provided_to_Requester_MCST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Provided to Requester</label>
    <type>Checkbox</type>
</CustomField>