force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Reason_For_Creation__c.field-meta.xml
<CustomField>
    <fullName>QCC_Reason_For_Creation__c</fullName>
    <description>For future values which will be passed from specific need forms</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason For Creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>