force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Request_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>QCC_Request_Sub_Type__c</fullName>
    <label>Request Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travelling with own wheelchair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>