force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Request_Sub_Types_MC__c.field-meta.xml
<CustomField>
    <fullName>QCC_Request_Sub_Types_MC__c</fullName>
    <label>Request Sub-Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPAP</fullName>
            </value>
            <value>
                <fullName>VPAP</fullName>
            </value>
            <value>
                <fullName>BPAP</fullName>
            </value>
            <value>
                <fullName>No equipment</fullName>
                <isActive>false</isActive>
                <label>No equipment</label>
            </value>
            <value>
                <fullName>Oxygen - Domestic</fullName>
                <isActive>false</isActive>
                <label>Oxygen - Domestic</label>
            </value>
            <value>
                <fullName>Oxygen – International - Qantas Supplied</fullName>
                <isActive>false</isActive>
                <label>Oxygen – International - Qantas Supplied</label>
            </value>
            <value>
                <fullName>Oxygen – International -Travelling with own</fullName>
                <isActive>false</isActive>
                <label>Oxygen – International -Travelling with own</label>
            </value>
            <value>
                <fullName>Stretcher</fullName>
                <isActive>false</isActive>
                <label>Stretcher</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>