force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Request_Type_SD__c.field-meta.xml
<CustomField>
    <fullName>QCC_Request_Type_SD__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Dog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>