force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Seat_Fixture_CBBG__c.field-meta.xml
<CustomField>
    <fullName>QCC_Seat_Fixture_CBBG__c</fullName>
    <label>Seat Fixture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seatbelt</fullName>
            </value>
            <value>
                <fullName>Extension Belt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>