force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Seating_Allocated_for_Customer_CBBG__c.field-meta.xml
<CustomField>
    <fullName>QCC_Seating_Allocated_for_Customer_CBBG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seating Allocated for Customer</label>
    <type>Checkbox</type>
</CustomField>