force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Send_Notification_to_Airline_MCNE__c.field-meta.xml
<CustomField>
    <fullName>QCC_Send_Notification_to_Airline_MCNE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Notification to Airline</label>
    <type>Checkbox</type>
</CustomField>