force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_SMA_Number_Special_Medical_QS__c.field-meta.xml
<CustomField>
    <fullName>QCC_SMA_Number_Special_Medical_QS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMA Number (Special Medical Authority)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>