force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Total_No_of_Cylinders_Required__c.field-meta.xml
<CustomField>
    <fullName>QCC_Total_No_of_Cylinders_Required__c</fullName>
    <label>Total No of Cylinders Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>